# TPSC_conductivity

./: README.md
src/: CMakeLists.txt  chi.cpp  chi.h  chi0.cpp  chi0.h  cond_opt.cpp  cond_opt.h  generique.cpp  generique.h  green.cpp  green.h  green0.cpp  green0.h  hamiltonien.cpp  hamiltonien.h  includeDef.h  tpsc_main.cpp
